# MiniMathLang-Compiler

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
examples/: test.mml
include/: ast.h  codegen.h  lexer.h  parser.h  typechecker.h
src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp  typechecker.cpp
